Fixing details on flex covers

--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ a:hover.categories-items {
 }
 .flex_covers {
 width: calc(100% / 6);
-padding: 0 15px 0 0;
+padding: 0 15px 15px 0;
 text-align: center;
 }
 .flex_covers img,
@@ -359,6 +359,7 @@ h3.titles_main {
 color: white;
 margin-top: 15px;
 margin-bottom: 7px;
+font-weight: 600;
 }
 h4.subtitles {
   font-weight: normal;
